--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/titleLabel1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/stick"
@@ -24,42 +24,49 @@
         app:layout_constraintVertical_bias="0.002" />
 
     <Button
-        android:id="@+id/button6"
-        android:layout_width="187dp"
-        android:layout_height="63dp"
+        android:id="@+id/startButton"
+        android:layout_width="185dp"
+        android:layout_height="75dp"
+        android:fontFamily="@font/stick"
         android:text="@string/start_game"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.64" />
+        app:layout_constraintVertical_bias="0.545" />
 
     <Button
-        android:id="@+id/button7"
-        android:layout_width="148dp"
-        android:layout_height="55dp"
+        android:id="@+id/highscoreButton"
+        android:layout_width="185dp"
+        android:layout_height="75dp"
+        android:fontFamily="@font/stick"
         android:text="@string/highscores"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.06"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.796" />
+        app:layout_constraintVertical_bias="0.719" />
 
     <Button
-        android:id="@+id/button8"
-        android:layout_width="148dp"
-        android:layout_height="55dp"
+        android:id="@+id/creditsButton"
+        android:layout_width="185dp"
+        android:layout_height="75dp"
+        android:fontFamily="@font/stick"
         android:text="@string/credits"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.939"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.796" />
+        app:layout_constraintVertical_bias="0.899" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/titleLabel2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/stick"
