--- a/app/src/main/res/layout/activity_high_score_screen.xml
+++ b/app/src/main/res/layout/activity_high_score_screen.xml
@@ -73,6 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="31dp"
         android:layout_marginBottom="68dp"
+        android:fontFamily="@font/stick"
         android:text="@string/load_scores"
         app:layout_constraintBottom_toTopOf="@+id/highScore2"
         app:layout_constraintStart_toStartOf="@+id/highScore1"
@@ -86,14 +87,15 @@
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="16dp"
+        android:autofillHints=""
         android:ems="10"
+        android:fontFamily="@font/stick"
         android:hint="@string/enter_amount_of_tiles_4_20"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/loadScores"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/highScoreTitleLabel"
-        tools:ignore="TextContrastCheck"
-        android:autofillHints="" />
+        tools:ignore="TextContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
