--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -221,13 +221,15 @@
         android:layout_width="51dp"
         android:layout_height="49dp"
         android:backgroundTint="@color/backgroundColor"
+        android:contentDescription="@string/unmute_audio"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.971"
-        app:srcCompat="@android:drawable/ic_lock_silent_mode" />
+        app:srcCompat="@android:drawable/ic_lock_silent_mode"
+        tools:ignore="ImageContrastCheck" />
 
     <Button
         android:id="@+id/endGameButton"
@@ -536,6 +538,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/backgroundColor"
+        android:contentDescription="@string/mute_audio"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.954"
