fixed game4screen crashing

--- a/app/src/main/res/layout/activity_game4_screen.xml
+++ b/app/src/main/res/layout/activity_game4_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#8C9EFF"
-    tools:context=".GameScreen">
+    tools:context=".Game4Screen">
 
     <ImageView
         android:id="@+id/imageView4"
